Background images are displayed while BVH is calculating (viewport render) #40242

Closed
opened 2014-05-17 23:28:00 +02:00 by gandalf3 · 8 comments
Member

System Information
Archlinux
Nvidia GTX 460

Blender Version
Broken: f93b76

Short description of error
When background images are enabled, they are displayed while building BVH for viewport render (instead of the normal checkered pattern).

Exact steps for others to reproduce the error

  1. Open attached .blend: background_images_BVH.blend (warning: it has a cube with 9 subserf levels. This is so that building BVH takes long enough for the effect to be visible)
  2. Press Shift Z to enable viewport render (the normal "loading screen" is displayed while the BVH is built)
  3. Disable viewport render, and enable background images in the properties region
  4. Enable viewport render again. The background image is displayed while building the BVH.
**System Information** Archlinux Nvidia GTX 460 **Blender Version** Broken: f93b76 **Short description of error** When background images are enabled, they are displayed while building BVH for viewport render (instead of the normal checkered pattern). **Exact steps for others to reproduce the error** 1. Open attached .blend: [background_images_BVH.blend](https://archive.blender.org/developer/F89322/background_images_BVH.blend) (warning: it has a cube with 9 subserf levels. This is so that building BVH takes long enough for the effect to be visible) 2. Press Shift Z to enable viewport render (the normal "loading screen" is displayed while the BVH is built) 3. Disable viewport render, and enable background images in the properties region 4. Enable viewport render again. The background image is displayed while building the BVH.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Doesn't seem a serious bug to me. The viewport is simply cleared to the default background when render starts, which includes the background image. No harm done afaict, it might even be useful.

Doesn't seem a serious bug to me. The viewport is simply cleared to the default background when render starts, which includes the background image. No harm done afaict, it might even be useful.
Author
Member

I agree it's pretty minor :)

It just struck me as odd, especially when the view is in perspective and/or not aligned to an axis (so background image is not normally visible), yet when switching to viewport render mode it appears for a second.

I agree it's pretty minor :) It just struck me as odd, especially when the view is in perspective and/or not aligned to an axis (so background image is not normally visible), yet when switching to viewport render mode it appears for a second.
Sergey Sharybin self-assigned this 2014-05-19 10:27:00 +02:00

This issue was referenced by 5f05ebc2d9

This issue was referenced by 5f05ebc2d9775581e7853c80ecd28033e5f0ae60

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5f05ebc2d9.

Closed by commit 5f05ebc2d9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40242
No description provided.