Fix T40242: 3D view background images incorrectly shown during viewport render.

Now they are shown when they are also visible in other draw modes.